# sessionfs

./: .env.example  .gitignore  .phase1-brief.md  .phase1b-brief.md  .phase2-brief.md  .phase3-brief.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  github-app-manifest.json  pyproject.toml  v0.10.0-org-admin-console-brief  v0.9.9-implementation-brief  v0.9.9-resume-rules-sync-brief
.agents/: README.md  atlas-backend.md  beacon.md  counsel-startup.md  forge-devops.md  herald-marketing.md  ledger-revenue.md  prism-frontend.md  relay-customer.md  scout-competitive-intelligence.md  scribe-docs.md  scribe-site-sync.md  sentinel-security.md  shield-compliance.md  shield-security-review.md  steward-finance.md  vault-licensing.md
.claude/commands/: brief.md  release.md
.gemini/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-api.yml  deploy-mcp.yml  publish-images.yml  security-scan.yml
.release/: README.md  private-files.txt  sanitize_main.py
charts/sessionfs/: Chart.yaml  values.yaml
charts/sessionfs/templates/: _helpers.tpl  api-deployment.yaml  dashboard-deployment.yaml  job-seed-license.yaml  mcp-deployment.yaml  migration-job.yaml  secret-license.yaml
dashboard/: Dockerfile  eslint.config.js  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/admin/: AdminDashboard.test.tsx  AdminDashboard.tsx  ConfirmModal.tsx  LicensesTab.tsx
dashboard/src/api/: ApiError.test.ts  client.ts
dashboard/src/auth/: LoginPage.test.tsx  LoginPage.tsx
dashboard/src/billing/: BillingPage.tsx
dashboard/src/components/: BackgroundTasks.tsx  Badge.tsx  BookmarkSidebar.tsx  Card.tsx  EmptyState.tsx  Layout.test.tsx  Layout.tsx  SearchBar.tsx  Skeleton.tsx  ThemeToggle.tsx  Toast.tsx  ToolIcon.tsx  Wordmark.tsx
dashboard/src/handoffs/: HandoffDetail.tsx  HandoffList.tsx  HandoffModal.tsx
dashboard/src/help/: HelpPage.test.tsx  HelpPage.tsx
dashboard/src/hooks/: useAdmin.ts  useAdminLicenses.ts  useAgentRuns.ts  useAudit.ts  useBookmarks.ts  useHandoffs.ts  useJudgeSettings.ts  useMe.ts  usePersonas.ts  useProjects.ts  useTickets.ts
dashboard/src/invites/: InvitesPage.tsx  useInvites.ts
dashboard/src/onboarding/: GettingStartedPage.tsx  OnboardingGate.test.tsx  OnboardingGate.tsx
dashboard/src/org/: ActivateLicensePanel.test.tsx  ActivateLicensePanel.tsx  MembersTab.test.tsx  MembersTab.tsx  OrgPage.test.tsx  OrgPage.tsx  OrgPageTransfer.test.tsx  OrgSettingsTab.tsx  (+4 more)
docs/: api-keys.md  cli-reference.md  compatibility.md  environment-variables.md  github-app.md  mcp-remote.md  org-admin.md  positioning.md  pricing.md  project-context.md  quickstart.md  rules.md  self-hosted.md  troubleshooting.md
docs/design/: agent-work-queues.md  licensing-org-redesign-product.md  licensing-org-redesign-synthesis.md  licensing-org-redesign.md  multi-repo-projects-product.md  multi-repo-projects.md  sso-oidc.md
docs/integrations/: bedrock-action-group.yaml  bedrock_lambda.py  github-actions-agent-run.yml  gitlab-agent-run.yml  scout-n8n.md  scout-signal-shape.md  vertex_tools.py
docs/security/: multi-repo-projects-code-review.md  multi-repo-projects-security-review.md  remote-resume-threat-model.md
ee/: LICENSE  __init__.py
ee/sessionfs_ee/: __init__.py
landing/: index.html
scripts/: check_opus_review_requests.py
site/: astro.config.mjs  package-lock.json  package.json
src/sessionfs/: __init__.py  active_ticket.py  features.py  profiles.py  retrieval_audit.py  session_ops.py
src/spec/: convert_cc.py
tests/: test_security_m11_input_validation.py  test_security_m4_cors.py  test_security_m7_tar_validation.py
tests/integration/: test_integration_pipeline.py
tests/server/: conftest.py
tests/unit/: test_active_ticket.py  test_alias.py  test_ansi_helper.py  test_ask_keywords.py  test_autosync.py  test_capture_guard.py  test_cloud_agent_integrations.py  test_cmd_agent.py  test_cmd_persona_ticket.py  test_cmd_ticket_watch.py  test_confirm_or_exit.py  test_default_org_cli.py  test_delete_cli.py  test_dlp.py  test_doctor_stale_install.py  test_features.py  test_hooks_installer.py  test_hooks_smoke.py  test_init.py  test_judge.py  test_judge_export.py  test_keys_cli.py  test_kilocode.py  test_mcp_instructions.py  test_mcp_server.py  test_multi_repo_projects.py  test_narrative.py  test_profiles.py  test_project_repos_cli.py  test_project_transfer_cli.py  test_pruner.py  test_resilience.py  test_review_state.py  test_roles.py  test_rules_emit.py  test_sanitize_main.py  test_skill_detector.py  test_tiers.py  test_watcher_active_ticket_annot.py  test_workspace_resolver.py
tests/utils/: ansi.py
(+318 files in other folders)
