[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sessionfs"
version = "0.13.2"
description = "Capture, sync, and resume AI coding sessions across 9 tools — Claude Code, Codex, Gemini, Copilot, Cursor, Amp, Cline, Roo Code, and Kilo Code."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    { name = "SessionFS Contributors" },
]
keywords = ["ai", "agents", "sessions", "sync", "claude", "codex", "gemini", "cursor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "jsonschema>=4.20,<5.0",
    "watchdog>=4.0,<7.0",
    "typer>=0.12,<1.0",
    "rich>=13.0,<16.0",
    "httpx>=0.27,<1.0",
    "mcp>=1.0,<2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://sessionfs.dev"
Repository = "https://github.com/SessionFS/sessionfs"
Documentation = "https://sessionfs.dev/docs"
Issues = "https://github.com/SessionFS/sessionfs/issues"

[project.optional-dependencies]
server = [
    "fastapi>=0.110,<1.0",
    # Transitive of fastapi. Pre-1.0.1 had GHSA-86qp-5c8j-p5mr
    # (host-header URL reconstruction → potential auth bypass).
    # FastAPI 0.135+ only requires starlette>=0.46.0, so pin
    # the floor explicitly to prevent prod from resolving back
    # to a vulnerable version.
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.27,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "python-multipart>=0.0.31",
    "boto3>=1.34,<2.0",
    # >=2.14.2 floor clears GHSA-4xgf-cpjx-pc3j (NestedSecretsSettingsSource
    # symlink traversal out of secrets_dir when secrets_nested_subdir=True).
    # We do not use that feature, but pin the floor as defense-in-depth.
    "pydantic-settings>=2.14.2,<3.0",
    "PyJWT>=2.13.0,<3.0",
    "google-cloud-storage>=2.14,<4.0",
    "cryptography>=48.0.1",
    "stripe>=8.0,<16.0",
    # OIDC SSO domain verification resolves DNS TXT records (no stdlib TXT
    # resolver exists). dnspython is the established async-capable resolver.
    "dnspython>=2.6,<3.0",
]
dev = [
    "sessionfs[server]",
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "aiosqlite>=0.20,<1.0",
    "ruff>=0.3,<1.0",
    # Pinned to 1.20.x to match CI. The CI lint step installs the
    # same constraint via `pip install -e .[dev]`. Drift caused a
    # post-release CI failure in v0.10.11 — local mypy 1.19 didn't
    # surface union-attr issues that 1.20.2 caught on main. Bump
    # both bounds together when bumping; never widen unilaterally.
    "mypy>=1.20,<2.0",
    "build>=1.0,<2.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
    # Defense-in-depth floor: msgpack arrives transitively via
    # pip-audit→CacheControl (audit-time tooling only; not a SessionFS
    # runtime dep and imported nowhere in src/). GHSA-6v7p-g79w-8964 is a
    # streaming-Unpacker reuse-after-error DoS fixed in 1.2.1. SessionFS
    # never uses msgpack, so impact is nil — pin keeps CI pip-audit green.
    "msgpack>=1.2.1",
]

[project.scripts]
sfs = "sessionfs.cli.main:cli_main"
sfsd = "sessionfs.daemon.main:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/sessionfs", "ee/sessionfs_ee"]

[tool.hatch.build]
include = [
    "src/sessionfs/**/*.py",
    "src/sessionfs/spec/schemas/*.json",
    "src/sessionfs/spec/examples/**/*",
    "ee/sessionfs_ee/**/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"src/sessionfs/cli/main.py" = ["E402"]
"src/sessionfs/mcp/remote_server.py" = ["E402"]
"src/sessionfs/server/routes/sessions.py" = ["E402"]
"src/sessionfs/store/local.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["no-any-return", "assignment", "var-annotated", "arg-type", "valid-type", "attr-defined", "index", "return-value"]
